// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile-flyout/ProfileFlyout renders with all props 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-3 {
  fill: #D4DBE1;
}

.emotion-4 {
  fill: #ffffff;
}

.emotion-7 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid #D4DBE1;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-6 {
  position: relative;
}

.emotion-8 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-1 {
  background-color: #6ac0e7;
  color: #3c3c3c;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-2"
  >
    <button
      className="hig__profile-flyout__button"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="Avatar for Anonymous User"
        className="emotion-1"
        role="img"
      >
        <span
          aria-hidden="true"
          className="emotion-0"
        >
          AU
        </span>
      </span>
    </button>
  </div>
  <div
    className="emotion-8"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-5"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-3"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-4"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-7"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-6"
      />
    </div>
  </div>
</div>
`;

exports[`profile-flyout/ProfileFlyout renders with no props 1`] = `
.emotion-9 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-3 {
  fill: #D4DBE1;
}

.emotion-4 {
  fill: #ffffff;
}

.emotion-7 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid #D4DBE1;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-6 {
  position: relative;
}

.emotion-1 {
  background-color: #6ac0e7;
  color: #3c3c3c;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-2"
  >
    <button
      className="hig__profile-flyout__button"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="Avatar for Anonymous User"
        className="emotion-1"
        role="img"
      >
        <span
          aria-hidden="true"
          className="emotion-0"
        >
          AU
        </span>
      </span>
    </button>
  </div>
  <div
    className="emotion-8"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-5"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-3"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-4"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-7"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-6"
      />
    </div>
  </div>
</div>
`;
